feat(security): 新增认证授权相关功能和配置
- 添加 AddAuthHeaderFilter 用于构建并注入 CLOUD_AUTH 请求头
- 重命名 PrismGatewayAuthenticationEntryPoint 为 GatewayAuthenticationEntryPoint
- 移除 PrismGatewayAuthenticationEntryPoint 中对 XMLHttpRequest 的判断冗余代码
- 新增 GatewayAuthorizationManager 授权管理器
- 配置 backendServiceFilterChain 安全过滤链，支持静态资源放行和白名单配置
- 添加 RemoveJwtFilter 用于移除请求中的 JWT Authorization 头
- 引入 RefreshTokenErrorMapClientManager 处理 refresh_token 过期异常转换
- 在 GatewaySecurityProps 中新增白名单路径配置项
- 更新 PrismOidcTokenCustomer 中的权限列表收集方式为 toList()